[package]
name = "forgejo_import"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["DevYukine <devyukine@gmx.de>"]
description = "A cli helping you to import/mirror repositories from external services to forgejo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
reqwest = { version = "^0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_repr = "^0.1"
serde_derive = "^1"
clap = { version = "^4.5", features = ["derive"] }
anyhow = "^1.0"
thiserror = "^2"
env_logger = "^0.11"
log = "^0.4"
tower = { version = "^0.5", features = ["util", "limit", "timeout"] }
console = "^0.15"
indicatif = "^0.17"
lazy_static = "^1.5"
const_format = "^0.2"
bytes = "^1.10"
base64 = "^0.22"
regex = "^1.11"

[build-dependencies]
built = "^0.7"
